--- a/src/main/resources/templates/add-inbound.html
+++ b/src/main/resources/templates/add-inbound.html
@@ -58,6 +58,11 @@
                                                 <div class = "text-danger" th:errors = "*{status}" th:if = "${#fields.hasErrors('status')}"></div>
                                             </div>
 
+                                            <div class = "form-group">
+                                                <label for = "description">Description</label>
+                                                <textarea class = "form-control" id = "description" placeholder = "Enter your description here..." rows = "4" th:field = "*{description}"></textarea>
+                                            </div>
+
                                             <div class = "text-center">
                                                 <a class = "btn btn-primary" th:href = "@{'/inbound/' + ${id} + '/details/new'}" th:if = "${inboundDTO.id != null}">Add new product</a>
                                                 <button class = "btn btn-success" type = "submit">Save</button>
